--- a/index.ipynb
+++ b/index.ipynb
@@ -214,7 +214,8 @@
     }
    ],
    "source": [
-    "for index in [0, 1, 2, ]"
+    "for index in [0, 1, 2, 3, 4, 5, 6]:\n",
+    "    "
    ]
   },
   {
