--- a/index.ipynb
+++ b/index.ipynb
@@ -215,7 +215,8 @@
    ],
    "source": [
     "for index in [0, 1, 2, 3, 4, 5, 6]:\n",
-    "    print(index)"
+    "    print(index)\n",
+    "    print()"
    ]
   },
   {
