--- a/index.ipynb
+++ b/index.ipynb
@@ -216,7 +216,7 @@
    "source": [
     "for index in [0, 1, 2, 3, 4, 5, 6]:\n",
     "    print(index)\n",
-    "    print()"
+    "    print(countries(index))"
    ]
   },
   {
