--- a/index.ipynb
+++ b/index.ipynb
@@ -211,8 +211,7 @@
    ],
    "source": [
     "for index in [0, 1, 2, 3, 4, 5, 6]:\n",
-    "    print(index)\n",
-    "    print(countries(index))"
+    "    print(index), print()"
    ]
   },
   {
