Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,9 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "for"
+   ]
   },
   {
    "cell_type": "markdown",
