Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -257,7 +257,8 @@
     }
    ],
    "source": [
-    "for index in [0, 1, 2, 3, 4, 5, 6, 7]"
+    "for index in [0, 1, 2, 3, 4, 5, 6, 7]:\n",
+    "    "
    ]
   },
   {
