--- a/index.ipynb
+++ b/index.ipynb
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
    ],
    "source": [
     "for index in [0, 1, 2, 3, 4, 5, 6, 7]:\n",
-    "    print(cities[index]+\",\", countries)"
+    "    print(cities[index]+\",\", countries[index])"
    ]
   },
   {
