Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -358,7 +358,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "range(0, len())"
+   ]
   },
   {
    "cell_type": "markdown",
